name:                Names
version:             0.1.0.0
synopsis:            Linguistics tool.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Josh Kirklin
maintainer:          jjvk2@cam.ac.uk
-- copyright:           
category:            Linguistics
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable Names
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances
                     , TupleSections
                     , DeriveDataTypeable
                     , RecordWildCards
                     , BangPatterns

  build-depends:       base >=4.7 && <4.8
                     , containers >=0.5 && <0.6
                     , transformers >=0.4 && <0.5
                     , vector >=0.10 && <0.11
                     , MonadRandom >=0.1 && <0.2
                     , text >=1.1 && <1.2
                     , text-normal >=0.2 && <0.3
                     , hierarchical-clustering >=0.4 && <0.5
                     , diagrams-lib >=1.2 && <1.3
                     , diagrams-svg >=1.1 && <1.2
                     , SVGFonts >=1.4 && <1.5
                     , ansi-terminal >=0.6 && <0.7
                     , directory >=1.2 && <1.3
                     , filepath >=1.3 && <1.4
                     , cmdargs >=0.10 && <0.11
  -- hs-source-dirs:      
  default-language:    Haskell2010
